fixed text alignment of orderItem in IE

--- a/src/components/OrderItems/OrderItems.css
+++ b/src/components/OrderItems/OrderItems.css
@@ -36,6 +36,8 @@
   position: absolute;
   bottom: -85px;
   text-align: center;
+  width: 100%;
+  left:0
 }
 
 .cardType {
